--- a/tests-interface.html
+++ b/tests-interface.html
@@ -33,9 +33,7 @@
 		</audio>
 	</cpu-audio>
 
-	<p>
-		Manual test : <a href="#track&t=5m">named jump at 5mn</a>, <a href="#&t=15m">unnamed jump at 15mn</a>
-	</p>
+	<div id="playground"></div>	
 
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
