--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -22,6 +22,13 @@ blog post : http://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-m
 -->
 
 <style>
+	/* Fallback */
+
+    audio[controls] {
+        display : block;
+        width : 100%;
+    }
+
 	/* Global default style, usign var. Integrators may override them */
 	:root {
 		--cpu-height : 64px;
