--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -456,13 +456,13 @@ a {
 						<circle cx="26" cy="22" r="4" />
 					</svg>
 				</div>
-				<div class="play" title="Lecture">
+				<div class="play" title="Mettre en pause">
 					<svg viewBox="0 0 32 32">
 						<path d="M 6,6 12.667,6 12.667,26 6,26 z" />
 						<path d="M 19.333,6 26,6 26,26 19.333,26 z" />
 					</svg>
 				</div>
-				<div class="pause" title="Pause">
+				<div class="pause" title="Écouter le sonore">
 					<svg viewBox="0 0 32 32">
 						<path d="M 6,6 6,26 26,16 z" />
 					</svg>
@@ -481,7 +481,7 @@ a {
 					</div>
 				</div>
 			</div>
-			<a class="actions">
+			<a class="actions" title="Partager et autres actions">
 				<svg viewBox="0 0 32 32">
 					<circle cx="12" cy="10" r="4" /><circle cx="12" cy="22" r="4" /><circle cx="23" cy="16" r="4" /><polygon points="12,8 24,14 24,18 12,12"/><polygon points="12,20 24,14 24,18 12,24"/>
 				</svg>
