--- a/index.html
+++ b/index.html
@@ -222,6 +222,14 @@
 	<li> <kbd>Escape</kbd> : back to start, stop playing</li>
 </ul>
 
+<h3 id="tests">Tests</h3>
+
+<ul>
+	<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+	<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
+	<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
+</ul>
+
 <h3 id="errors">Error test-cases</h3>
 
 <div>
