Also back to project frontpage needed

--- a/tests-browser.html
+++ b/tests-browser.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+	<p><a href="./index.html">CPU-Audio Webcomponent</a></p>
+
 	<p>
 		This is the browser tests. Your browser may fail some tests, but the webcomponent may work even not degraded.
 	</p>
