--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+	<p><a href="./index.html">CPU-Audio Webcomponent</a></p>
+
 	<p>
 		This is the minimal service tests. Your browser should be able to use the hash links, even if the graphical interface don't show up, and the audio player still show the native controls.<br />
 		Manual test : <a href="#track&t=5m">named jump at 5mn</a>, <a href="#&t=15m">unnamed jump at 15mn</a>
