Quick and dirty builder script. Can't believe i've done it in a evening

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<script src="webcomponentsjs/webcomponents-hi.js"></script>
-	<link rel="import" href="./cpu-audio.html" type="text/html">
+	<!-- link rel="import" href="./cpu-audio.html" type="text/html" -->
+	<link rel="import" href="./dist/cpu-audio.html" type="text/html">
 
 
 	<style type="text/css">
