--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="tests/qunit.css">
 
 	<script src="webcomponentsjs/webcomponents-hi.js"></script>
-	<link rel="import" href="./cpu-audio.html" type="text/html">
+	<link rel="import" href="./dist/cpu-audio.html" type="text/html">
 </head>
 <body>
 
