--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<title>cpu-audio webcomponent demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<script src="webcomponentsjs/webcomponents-hi.js"></script>
-	<!-- link rel="import" href="./cpu-audio.html" type="text/html" -->
-	<link rel="import" href="./dist/cpu-audio.html" type="text/html">
+	<!--
+		<script src="webcomponentsjs/webcomponents-hi.js"></script>
+		<link rel="import" href="./dist/cpu-audio.html" type="text/html">
+	-->
+	<script src="./dist/cpu-audio.js"></script>
 
 
 	<style type="text/css">
