--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<script src="webcomponentsjs/webcomponents-hi.js"></script>
 		<link rel="import" href="./dist/cpu-audio.html" type="text/html">
 	-->
-	<script src="./dist/cpu-audio.js"></script>
-
+	<script src="./dist/cpu-audio.js" async></script>
 
 	<style type="text/css">
 		style.showcode {
