--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="tests/qunit.css">
 
-	<script src="webcomponentsjs/webcomponents-hi.js"></script>
+	<script src="./tests-assets/webcomponents-hi.js"></script>
 	<link rel="import" href="./dist/cpu-audio.html" type="text/html">
 </head>
 <body>
