--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 <h3 id="cpu_controller">Global page controller</h3>
 <div>
-	↓ Controller only on the playing / last played &lt;audio&gt;
+	↓ Controller only on the playing / last played <code>&lt;audio&gt;</code>
 	<cpu-controller>
 	</cpu-controller>
 </div>
@@ -231,18 +231,6 @@
 	<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
 </ul>
 
-<h3 id="errors">Error test-cases</h3>
-
-<div>
-	↓ Bad media call. Alas, Chrome won't crash it until any interaction, Firefox never display any error.
-
-	<cpu-audio title="This player must crash" poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" canonical="https://dascritch.net/">
-		<!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
-		<audio controls id="oups">
-			<source src="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg"  type="audio/mpeg" />
-		</audio>
-	</cpu-audio>
-</div>
 
 <h3 id="fallbacks">Fallbacks</h3>
 <div>
