--- a/tests-browser.html
+++ b/tests-browser.html
@@ -21,10 +21,11 @@
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
 	</ul>
 
-	<audio id="track" controls="controls">
-		<source src="https://dascritch.net/vrac/Emissions/SuppWeekEnd/386-SupplementWeekEnd%2831-05-14%29.ogg" type="audio/ogg; codecs=vorbis" />
-		<source src="https://dascritch.net/vrac/Emissions/SuppWeekEnd/podcast/386-SupplementWeekEnd%2831-05-14%29.mp3" type="audio/mpeg" />
-	</audio>
+	<cpu-audio>
+		<audio id="track" controls="controls" preload="auto">
+			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
+		</audio>
+	</cpu-audio>
 
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
