Parameters to not put the share button #15

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div>
 	<p>You can point to a moment of any audio of this page via a <code>&lt;a href&gt;</code> tag, even outside from this page.</p>
 
-	<cpu-audio 
+	<cpu-audio hide="actions"
 		title="Ex0085 Le Mystère Enigma"
 		poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
 		canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma"
