No need to show anymore the static chapter list

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 		</audio>
 	</cpu-audio>
 
-	<p>
+	<p class="cpu-audio-without-webcomponents">
 		Chapters (↓ This section for demo purposes is static, not generated) :
 	</p>
-	<ol>
+	<ol class="cpu-audio-without-webcomponents">
 		<li>
 			<a href="#emission&amp;t=1m17s">Bonjour à toi, Enfant du Futur Immédiat : Des chiffres et des lettres —
 			(1:17)</a>
