--- a/index.html
+++ b/index.html
@@ -228,16 +228,14 @@
 <h3 id="personnalization">Personnalization</h3>
 <div id="personnalization-demo">
 	<p>With CSS variables, you can change some aspects, even only in a region of your page.</p>
-	<pre>
-	<style class="showcode" scoped>
+	<pre><style class="showcode" scoped>
 		#personnalization-demo {
 		--cpu-background : yellow;
 		--cpu-color : green;
 		--cpu-playing-background : yellow;
 		--cpu-playing-color : green;
 		}
-	</style>
-	</pre>
+	</style></pre>
 	<cpu-audio
 		title="Au carnaval avec Samba Résille (2003)"
 		poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
