restyle demo page

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 		h1, h2, h3 {
 			margin : 2em auto 1em;
 			padding : 10px;
-			background : #333;
-			color : #CCC;
-			text-align: center
+			background : #ddd;
+			color : #222;
+			text-align: center;
+			box-shadow: grey 2px -2px 2px;
 		}
 	</style>
 
@@ -58,7 +59,7 @@
 
 <body>
 <h1>
-	Presentation of &lt;CPU-Audio&gt; project. 
+	&lt;CPU-Audio&gt; web-component
 </h1>
 
 <div><p>An audio web-component to provide an user-interface, timecoded links and some other features. <a href="https://github.com/dascritch/cpu-audio">Open-source</p></p>
