some cleanse and comments

--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,11 @@
 			</div>
 			<a class="actions" title="${__.more}">
 				<svg viewBox="0 0 32 32">
-					<circle cx="12" cy="10" r="4" /><circle cx="12" cy="22" r="4" /><circle cx="23" cy="16" r="4" /><polygon points="12,8 24,14 24,18 12,12"/><polygon points="12,20 24,14 24,18 12,24"/>
+					<circle cx="12" cy="10" r="4" />
+					<circle cx="12" cy="22" r="4" />
+					<circle cx="23" cy="16" r="4" />
+					<polygon points="12,8 24,14 24,18 12,12"/>
+					<polygon points="12,20 24,14 24,18 12,24"/>
 				</svg>
 			</a>
 		</div>
@@ -65,7 +69,8 @@
 				</a>
 				<a href="#" target="social" class="link" title="${__.download}">
 					<svg viewBox="0 0 32 32">
-						<path d="M 6,6 26,6 16,26 z" /><rect x="6" y="22" width="20" height="4" />
+						<path d="M 6,6 26,6 16,26 z" />
+						<rect x="6" y="22" width="20" height="4" />
 					</svg>
 					<span>${__.download}</span></a>
 				<a class="back" title="${__.back}">${__.back}</a>
@@ -77,5 +82,3 @@
 	<ul class="playlist">
 	</ul>
 </div>
-
-
