--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -14,7 +14,7 @@
 
 	<p>
 		This is the minimal service tests. Your browser should be able to use the hash links, even if the graphical interface don't show up, and the audio player still show the native controls.<br />
-		Manual test : <a href="#track&t=5m">named jump at 5mn</a>, <a href="#&t=15m">unnamed jump at 15mn</a>
+		Manual test : <a href="#track&t=1m">named jump at 1mn</a>, <a href="#&t=30s">unnamed jump at 30</a>, <a href="#&t=1m30s,1m40s">unnamed jump at 1mn30 and stops at 1mn40</a>
 	</p>
 	<p>
 		See also :
