adding visual element
Playing time range using start-point,end-point notation #11

--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,14 @@
 					<div class="time">
 						<div class="loadingline"></div>
 						<div class="elapsedline"></div>
+						<div class="points">
+							<svg class="pointstart" viewBox="0 0 2 5">
+								<path d="M 0,0 2,0 1,1 1,4 2,5 0,5 z" />
+							</svg>
+							<svg class="pointend" viewBox="0 0 2 5">
+								<path d="M 2,0 0,0 1,1 1,4 0,5 2,5 z" />
+							</svg>
+						</div>
 						<time class="popup">--:--</time>
 					</div>
 				</div>
