--- a/src/template.html
+++ b/src/template.html
@@ -29,6 +29,14 @@
 					<div class="title"><a href="#" class="canonical" title="${__.canonical}"></a></div>
 					<a class="elapse" title="${__.moment}" tabindex="-1">…</a>
 				</div>
+				<div class="handheld-nav">
+					<button type="button" class="restart">|⇐</button>
+					<button type="button" class="fastreward">⇐</button>
+					<button type="button" class="reward">←</button>
+					<input type="time" step="1" min="0:00" class="inputtime" />
+					<button type="button" class="foward">→</button>
+					<button type="button" class="fastfoward">⇒</button>
+				</div>
 				<div class="line">
 					<div class="time">
 						<div class="loadingline"></div>
