as i'm not very good at svg, i use symbols but fallen in emoji switch hell

--- a/src/template.html
+++ b/src/template.html
@@ -30,12 +30,12 @@
 					<a class="elapse" title="${__.moment}" tabindex="-1">…</a>
 				</div>
 				<div class="handheld-nav">
-					<button type="button" class="restart">|⇐</button>
-					<button type="button" class="fastreward">⇐</button>
-					<button type="button" class="reward">←</button>
+					<button type="button" class="restart">&#65039;⏮</button>
+					<button type="button" class="fastreward">&#65039;⯬</button>
+					<button type="button" class="reward">&#65039;⏪</button>
 					<input type="time" step="1" min="0:00" class="inputtime" />
-					<button type="button" class="foward">→</button>
-					<button type="button" class="fastfoward">⇒</button>
+					<button type="button" class="foward">&#65039;⏩</button>
+					<button type="button" class="fastfoward">&#65039;⯮</button>
 				</div>
 				<div class="line">
 					<div class="time">
