displace index.html
Explode index.html, Chrome loads and caches so takes to much time #31

--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-	<p><a href="./index.html">CPU-Audio Webcomponent</a></p>
+	<p><a href=".">CPU-Audio Webcomponent</a></p>
 
 	<p>
 		This is the minimal service tests. Your browser should be able to use the hash links, even if the graphical interface don't show up, and the audio player still show the native controls.<br />
