--- a/tests-browser.html
+++ b/tests-browser.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<p><a href="./index.html">CPU-Audio Webcomponent</a></p>
+	<p><a href=".">CPU-Audio Webcomponent</a></p>
 
 	<p>
 		This is the browser tests. Your browser may fail some tests, but the webcomponent may work even not degraded.
