--- a/tests-interface.html
+++ b/tests-interface.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-	<p><a href="./index.html">CPU-Audio Webcomponent</a></p>
+	<p><a href=".">CPU-Audio Webcomponent</a></p>
 	<p>
 		This is the graphic interface, working only web the webcomponent is fully supported by the browser.
 	</p>
