--- a/LIVE.html
+++ b/LIVE.html
@@ -12,12 +12,12 @@
         <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" type="audio/mpeg">
     </audio>
     <!-- fallback messages for browsers without webcomponents -->
-    <div class="cpu-audio-without-webcomponents too-old">
+    <!-- div class="cpu-audio-without-webcomponents too-old">
         <h2>Your browser DOESN'T support WebComponent fairly enough.</h2>
         <p>
             This page is <strong>not functionnal</strong>.
         </p>
-    </div>
+    </div -->
 </cpu-audio>
 </div>
 
