--- a/LIVE.html
+++ b/LIVE.html
@@ -11,13 +11,7 @@
     <audio controls id="sound">
         <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" type="audio/mpeg">
     </audio>
-    <!-- fallback messages for browsers without webcomponents -->
-    <!-- div class="cpu-audio-without-webcomponents too-old">
-        <h2>Your browser DOESN'T support WebComponent fairly enough.</h2>
-        <p>
-            This page is <strong>not functionnal</strong>.
-        </p>
-    </div -->
+    {% include no_component_message.html %}
 </cpu-audio>
 </div>
 
