Deploy ugly old school hack. Sorry Dirty Hacky

--- a/LIVE.html
+++ b/LIVE.html
@@ -11,7 +11,7 @@
     <audio controls id="sound">
         <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" type="audio/mpeg">
     </audio>
-    {% include no_component_message.html %}
+    <!-- {% include no_component_message.html %} -->
 </cpu-audio>
 </div>
 
@@ -285,3 +285,5 @@ document.addEventListener('DOMContentLoaded', function(){
     .pan:target { display :block ; }
 </style>
 </div>
+
+<!-- {% include footer.html %} -->
