--- a/live_config.html
+++ b/live_config.html
@@ -1,3 +1,26 @@
+<script src="./dist/cpu-audio.js" async></script>
+<link rel="stylesheet" href="./src/global.css" />
+
+<div id="demo">
+<cpu-audio 
+    title="Au carnaval avec Samba Résille (2003)"
+    poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
+    canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille"
+    twitter="@dascritch"
+    >
+    <audio controls id="sound">
+        <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" type="audio/mpeg">
+    </audio>
+    <!-- {% include no_component_message.html %} -->
+</cpu-audio>
+</div>
+
+<a href="#configurator_html">Configure html</a>
+<a href="#generated_html">Generated html</a>
+<a href="#configurator_css">Configure css</a>
+<a href="#generated_css">Generated css</a>
+
+
 <form id="configurator_html" action="#generated_html" class="pan" >
 
 <fieldset>
@@ -78,7 +101,7 @@
 </form>
 
 
-<div class="pan" id="generated_css">
+<div class="pan" id="generated_html">
     Paste this HTML code where you want the player in your page
 <pre id="code">
 </pre>
@@ -128,6 +151,9 @@
 </fieldset>
 
 <fieldset>
+    <label>
+        <span></span><span></span><span><input type="text" /></span>
+    </label>
     <label for="css_elapse-width">
         <span>Time indicator width (upper than 640px wide)</span>
         <input id="css_elapse-width" name="css_elapse-width" type="text" />
@@ -252,7 +278,7 @@ function configurator_css() {
 }
 
 function noop(event) {
-    document.location.hash = event.target.action;
+    document.location.hash = '#' + event.target.action.split('#')[1];
     event.preventDefault();
 }
 
