--- a/live_config.html
+++ b/live_config.html
@@ -160,19 +160,19 @@
                 <th scope="row" colspan="2">Time indicator width</th>
                 <td colspan="2"><input name="css_elapse-width[0]" type="text" value="185px" /></td>
                 <td colspan="2"><input name="css_elapse-width[1]" type="text" value="160px" /></td>
-                <td><input id="css_elapse-width" name="css_elapse-width[2]" type="text" value="80px" /></td>
+                <td colspan="2"><input id="css_elapse-width" name="css_elapse-width[2]" type="text" value="80px" /></td>
             </tr>
             <tr>
                 <th scope="row" colspan="2">Font size</th>
                 <td colspan="2"><input name="css_font-size[0]" type="text" value="15px" /></td>
                 <td colspan="2"><input name="css_font-size[1]" type="text" value="13px" /></td>
-                <td><input name="css_font-size[2]" type="text" value="" /></td>
+                <td colspan="2"><input name="css_font-size[2]" type="text" value="" /></td>
             </tr>
             <tr>
                 <th scope="row" colspan="2">Height and width of the square buttons</th>
                 <td colspan="2"><input name="css_height[0]" type="text" value="64px" /></td>
                 <td colspan="2"><input name="css_height[1]" type="text" value="32px" /></td>
-                <td><input name="css_height[2]" type="text" value="" /></td>
+                <td colspan="2"><input name="css_height[2]" type="text" value="" /></td>
             </tr>
         </tbody>
     </table>
